set viewport; minor tweaks to descriptions

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>{{ page.title }}</title>
 		<h1>Leon Allen</h1>
 		<h5>Leon.Allen22@protonmail.com</h5>
