--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,10 @@
     <title>{{ page.title }}</title>
     <h1>Leon Allen</h1>
     <h5>Leon.Allen22@protonmail.com</h5>
+    <div>
+      <a href="/">About Me</a>
+      <a href="/about">Site</a>
+    </div>
     <hr>
   </head>
   <body>
