--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }}</title>
     <h1>Leon Allen</h1>
-    <h5>Leon.Allen22@protonmail.com</h5>
     <div>
       <a href="/">About Me</a>
       <a href="/about">Site</a>
@@ -14,5 +13,14 @@
   </head>
   <body>
     {{ content }}
+
+    <footer>
+      <p>Written by Leon Allen using <a href="https://jekyllrb.com/">Jekyll</a></p>
+      <p>Hosted on <a href="https://github.com/">Github</a></p>
+      <address>
+        <p>Email: <a href="mailto:leon.allen22@protonmail.com">leon.allen22@protonmail.com</a></p>
+      </address>
+    </footer>
   </body>
+
 </html>
