move png to assets directory && add a page for blog posts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
     <div>
       <a href="/">About Me</a>
       <a href="/about">Site</a>
+      <a href="/blog">Blog</a>
     </div>
     <hr>
   </head>
