--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ page.title }}</title>
-    <h1>Leon Allen</h1>
-    <div>
-      <a href="/">About Me</a>
-      <a href="/about">Site</a>
-      <a href="/blog">Blog</a>
-    </div>
-    <hr>
-  </head>
-  <body>
-    {{ content }}
 
-    <footer>
-      <p>Written by Leon Allen using <a href="https://jekyllrb.com/">Jekyll</a></p>
-      <p>Hosted on <a href="https://github.com/">Github</a></p>
-      <address>
-        <p>Email: <a href="mailto:leon.allen22@protonmail.com">leon.allen22@protonmail.com</a></p>
-      </address>
-    </footer>
-  </body>
+  {%- include head.html -%}
+
+    <body>
+      
+      {%- include header.html -%}
+
+      <main class="page-content" aria-label="Content">
+        <div class="wrapper">
+          {{ content }}
+        </div>
+      </main>
+
+      {%- include footer.html -%}
+
+    </body>
 
 </html>
