apply responsive layout to posts & remove redundant blog page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
             <li>
               <figure>
                 <a href="https://fsf.org/"></a>
-                <img src="assets/FSFBadge.png" alt="Free Software Foundation Badge" />
+                <img src="/assets/FSFBadge.png" alt="Free Software Foundation Badge" />
               </figure>
             </li>
         </ul>
